--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,13 @@ html {
   border: 3px solid red;
 }
 
-/* #content {
+#content {
   background: linear-gradient(to right, #003973, #e5e5be);
 }
 
 #skill-container {
   background: linear-gradient(to right, #314755, #26a0da);
-} */
+}
 .bgimg {
   background-position: center;
   background-size: cover;
@@ -61,4 +61,9 @@ td {
   padding: 10px 10px 10px 10px;
   margin: auto;
   aspect-ratio: 100 / 29;
+}
+
+#navbar {
+  position: fixed;
+  top: 0px;
 }
